# web-scraping-task1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  main.yml  run-main.yml  test.yml
src/main/: Scraping.ipynb  main.py  parser.py  scraper.py  scraping.ipynb  utills.py  utils.py
src/main/css/: styles.css
src/tests/: test_logger.py  test_main.py  test_mock.py  test_parser.py  test_request.py  test_scraper.py
